--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3120,7 +3120,7 @@ input, select, textarea {
 	text-align: center;
 }
 
-.loginbox h5{
+.loginbox h5:hover{
 	text-decoration: underline rgb(64, 116, 184);
 }
 
