--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <div class="logincontainer">
     <div class="loginbox">
         <h1>Login</h1>
-        <form >
+        <form method="POST" action="">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
             <label for="password">Password:</label>
