--- a/templates/admin/editpost.html
+++ b/templates/admin/editpost.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static',filename='admin/main.css')}}" />
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -47,7 +47,7 @@
   <div class="row mb-3">
     <label for="inputEmail3" class="col-sm-2 col-form-label">Content 1</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputEmail3" name="content1" placeholder="enter post content 1" value="{{post.content1}}">
+      <input type="text" class="form-control" id="inputEmail3" name="content1" placeholder="enter post content 1" value="{{blog.content1}}">
     </div>
   </div>
   <div class="row mb-3">
