--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2176,7 +2176,7 @@ input, select, textarea {
 
 	#header {
 		position: relative;
-		background-image: url("https://i.pinimg.com/1200x/a6/cf/22/a6cf22a1f8f73a129a315de3f9ea348f.jpg");
+		background-image: url("https://i.pinimg.com/736x/43/59/07/4359076cfbfec56f35969781b2f452e3.jpg");
 		background-size: cover;
 		background-position: center center;
 		background-attachment: fixed;
@@ -2184,6 +2184,7 @@ input, select, textarea {
 		text-align: center;
 		padding: 7.5em 0 2em 0;
 		cursor: default;
+		font-weight: bold;
 	}
 
 		#header:before {
@@ -2214,6 +2215,7 @@ input, select, textarea {
 			color: #fff;
 			font-size: 3em;
 			line-height: 1em;
+			font-weight: bold;
 		}
 
 			#header h1 a {
@@ -3593,4 +3595,8 @@ p{
     font-size: 16px;
     transition: background-color 0.3s ease;
     margin-right: 20px;
+}
+
+.row{
+	
 }
