--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -1,15 +1,6 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}" />
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Admin Dashboard</title>
-  </head>
+{% extends "base.html" %}
+{% block title %} Admin{% endblock %}
+{% block body %}
   <body>
     <h1>Admin Dashboard</h1>
     <p>
@@ -42,7 +33,7 @@
       <th scope="row">{{i.post_id}}</th>
       <td>{{i.title}}</td>
       <td><a href="/editpost/{{i.post_id}}"><button type="button" class="btn btn-info">Edit</button></a></td>
-      <td><a href=""><button type="button" class="btn btn-danger">Delete</button></a></td>
+      <td><a href="/delete/{{i.post_id}}"><button type="button" class="btn btn-danger">Delete</button></a></td>
     </tr>
     {% endfor %}
   </tbody>
@@ -76,4 +67,4 @@
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
-</html>
+{% endblock %}
