--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,8 +5,20 @@
     <div class="loginbox">
         <h1>Sign Up</h1>
         <form >
+            <div class="contactname">
+                <div class="name">
+                    <label for="firstname">First Name:</label>
+                    <input type="text" id="firstname" name="first_name" required>
+                </div>
+                <div class="name">
+                    <label for="lastname">Last Name:</label>
+                    <input type="text" id="lastname" name="last_name" required>
+                </div>
+            </div>
             <label for="username">Create Username:</label>
             <input type="text" id="username" name="username" required>
+            <label for="username">Email:</label>
+            <input type="text" id="username" name="email" required>
             <label for="password">Create Password:</label>
             <input type="password" id="password" name="password" required>
             <label for="password">Confirm Password:</label>
