--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,31 +4,31 @@
 <div class="logincontainer">
     <div class="loginbox">
         <h1>Sign Up</h1>
-        {% with meessages=get_flashed_messages() %}
+        {% with meessages=get_flashed_messages(category_filter=["email_error"])%}
         {% if messages %}
         <div style="color: red;">{{messages[0]}} go to <a href="{{url_for('login')}}">Login Page</a></div>{% endif %}{% endwith %}
         <form method="POST" action="">
             <div class="contactname">
                 <div class="name">
                     <label for="firstname">First Name:</label>
-                    <input type="text" id="firstname" name="first_name" required>
+                    <input type="text" id="first_name" name="first_name" required>
                 </div>
                 <div class="name">
                     <label for="lastname">Last Name:</label>
-                    <input type="text" id="lastname" name="last_name" required>
+                    <input type="text" id="last_name" name="last_name" required>
                 </div>
             </div>
             <label for="username">Create Username:</label>
             <input type="text" id="username" name="username" required>
             <label for="username">Email:</label>
-            <input type="text" id="username" name="email" required>
+            <input type="text" id="email" name="email" required>
             <label for="password">Create Password:</label>
             <input type="password" id="password" name="password" required>
-            {% with messages=get_flashed_messages() %}
-            {% if messages %}
-            <div style="color: red;">{{messages[1]}}</div>{% endif %}{% endwith %}
             <label for="password">Confirm Password:</label>
-            <input type="password" id="password" name="confirm password" required>
+            {% with messages=get_flashed_messages(category_filter=["password_error"])%}
+            {% if messages %}
+            <div style="color: red;">{{messages[0]}}</div>{% endif %}{% endwith %}
+            <input type="password" id="password" name="confirmpassword" required>
             <button type="submit" class="button large "> Sign Up</button>
         </form>
     </div>
