--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3597,6 +3597,49 @@ p{
     margin-right: 20px;
 }
 
-.row{
-	
+.sides{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	box-sizing: border-box;
+	background-color: #f5f5f5;
+	position: relative;
 }
+
+.sides::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  width: 1px;
+  background-color: #ccc;
+}
+
+#left{
+	color: black;
+	padding: 10px;
+	flex: 1;
+	margin-right: 10px;
+	font-size: 18px;
+}
+
+#left textarea{
+	width: 450px;
+}
+
+#left button{
+	border-radius: 10px;
+}
+
+#right{
+	color: black;
+	padding: 20px;
+	flex: 1;
+	margin-left: 10px;
+}
+
+label{
+	font-size: 16px;
+}
+
