--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3103,7 +3103,7 @@ input, select, textarea {
 	display: flex;
   	justify-content: center;   
  	align-items: center;       
-  	height: 80vh;             
+  	height: 100vh;             
   	background-color: #f5f5f5;
 }
 
@@ -3643,3 +3643,12 @@ label{
 	font-size: 16px;
 }
 
+span img{
+	max-width: 50%;
+	max-height: 50%;
+}
+
+.actions-pagination{
+	display: flex;
+	justify-content: space-between;
+}
