--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -3,6 +3,8 @@
 {% block body %}
   <body>
     <h1>Admin Dashboard</h1>
+    <br>
+    <h2>Welcome {{current_user.first_name}}</h2>
     <p>
   <a class="btn btn-primary" data-bs-toggle="collapse" href="#P" role="button" aria-expanded="false" aria-controls="collapseExample">
     Blogs
@@ -13,7 +15,10 @@
   <a class="btn btn-primary" href="/editpost/new" role="button">
     Add New Post
   </a>
-  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-primary" href="/reminder" role="button">
+    Reminder
+  </a>
+  <button class="btn btn-primary" href="/logout">
     Log Out
   </button>
 </p>
